Change list styles for ul and ol

--- a/css/assets/external_css.css
+++ b/css/assets/external_css.css
@@ -5,3 +5,15 @@ body {
 h1 {
     font-size: 38px;
 }
+
+h2 {
+    font-size: 32px;
+}
+
+ul.ingredients-list {
+    list-style: square inside;
+}
+
+ol.direction-list {
+    list-style: ethiopic-halehame;
+}
