Remove underline in header ul and changebackground to orange

--- a/css/assets/external_css.css
+++ b/css/assets/external_css.css
@@ -17,3 +17,11 @@ ul.ingredients-list {
 ol.direction-list {
     list-style: ethiopic-halehame;
 }
+
+body {
+    background-color: orange;
+}
+
+a.header-ul {
+    text-decoration: none;
+}
